# crosschain_validator

./: .dockerignore  .env.example  .gitignore  docker-compose.yml
crosschain_backend/: add_contracts.py  gunicorn.py  manage.py  pyproject.toml  scanners.py
crosschain_backend/base/: models.py  tests.py
crosschain_backend/base/support_functions/: base.py  decorators.py  requests.py  responses.py
crosschain_backend/contracts/: admin.py  apps.py  exceptions.py  models.py  tests.py  urls.py
crosschain_backend/contracts/services/: functions.py
crosschain_backend/contracts/services/scanners/: base.py  functions.py  handlers.py
crosschain_backend/crosschain_backend/: asgi.py  celery.py  consts.py  urls.py  wsgi.py
crosschain_backend/crosschain_backend/settings/: base.py
crosschain_backend/networks/: admin.py  exceptions.py  models.py  tests.py  types.py
crosschain_backend/networks/services/: functions.py
crosschain_backend/notifications/: models.py  tasks.py
crosschain_backend/notifications/services/: functions.py
crosschain_backend/tokens/: admin.py  exceptions.py  models.py  serializers.py
crosschain_backend/tokens/services/: function.py
crosschain_backend/users/: admin.py  models.py
crosschain_backend/validators/: admin.py  models.py  tasks.py  tests.py
crosschain_backend/validators/services/: functions.py
docker/: backend.Dockerfile  backend_scanners.Dockerfile  celery_beat.Dockerfile  celery_broker.Dockerfile  celery_worker.Dockerfile  http_server.Dockerfile
docker/backend/: entrypoint.sh  entrypoint_scanners.sh
docker/nginx/: nginx.conf
(+6 files in other folders)
